--- a/FluidSim/index.html
+++ b/FluidSim/index.html
@@ -5,6 +5,7 @@
 	<title>Eulerian Fluid Simulation</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+	<script src="https://unpkg.com/p5.js-svg@1.5.1"></script>
 
 </head>
 
