--- a/FluidSim/index.html
+++ b/FluidSim/index.html
@@ -8,6 +8,7 @@
 	<script src="https://cdn.tailwindcss.com"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
 	<script src="https://unpkg.com/p5.js-svg@1.5.1"></script>
+	<link rel="stylesheet" href="styles.css">
 
 </head>
 
