fixed svgs and pngs

--- a/FluidSim/index.html
+++ b/FluidSim/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<h1 class='text-center font-bold tracking-tight text-3xl pt-4'>FluidSim</h1>
+	<h1 class='text-center font-bold tracking-tight text-3xl pt-4'>CoffeeSim</h1>
 	<script src="sketch.js"></script>
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
